# multitask_RL

./: .gitignore  .gitmodules  DEBUG.txt  DEBUG_OUT.txt  LICENSE  MUJOCO_LOG.TXT  README.md  __init__.py  all_eval_info.pkl  eval_classifier_best_of_N_infos_libero_90-living_room_scene1_pick_up_the_alphabet_soup_and_put_it_in_the_basket|pick_up_the_ketchup_and_put_it_in_the_basket_20260104_025928.pkl  eval_libero_best_of_N_infos.pkl  eval_libero_best_of_N_infos_libero_90-living_room_scene1_pick_up_the_alphabet_soup_and_put_it_in_the_basket|pick_up_the_ketchup_and_put_it_in_the_basket_20251228_182711.pkl  eval_libero_best_of_N_infos_libero_90-living_room_scene1_pick_up_the_alphabet_soup_and_put_it_in_the_basket|pick_up_the_ketchup_and_put_it_in_the_basket_20251228_185016.pkl  evaluation.py  evaluation_libero.py  log_utils.py  main.py  main_online.py  mean_eval_info.pkl  pyproject.toml  requirements.txt  test_iterate_over_libero_dataset.py  test_libero_qc_formatting.py  test_libero_subproc.py  test_subproc_libero_env.py
agents/: __init__.py  acbcflowactor.py  acfql.py  acifql.py  acrlpd.py  iql.py  iql_pi0actor.py  iql_pi0actor_chunked.py  qc_pi0actor_chunked.py  trans_classifier.py
dataset_stats/libero_90__black_bowl_on_plate_kitchen_scene1/: stats.json  stats_summary.csv
dataset_stats/libero_90__book_right_compartment_caddy__study_scene1/: stats.json  stats_summary.csv
debugging/: test_distrax.py  test_jax_setup.py  test_pi0_libero.py  test_tanh_squashing.py
envs/: env_utils.py  libero_utils.py  robomimic_utils.py
eval_results/: eval_libero_best_of_N_n128_libero_90-living_room_scene1_20251228_220742.pkl  eval_libero_best_of_N_n128_libero_90-living_room_scene1_20251228_221332.pkl  eval_libero_best_of_N_n128_libero_90-living_room_scene1_20251228_223514.pkl  eval_libero_best_of_N_n128_libero_90-living_room_scene1_20251228_224100.pkl  eval_libero_best_of_N_n16_libero_90-living_room_scene1_20251228_220722.pkl  eval_libero_best_of_N_n16_libero_90-living_room_scene1_20251228_221247.pkl  eval_libero_best_of_N_n16_libero_90-living_room_scene1_20251228_223447.pkl  eval_libero_best_of_N_n16_libero_90-living_room_scene1_20251228_223956.pkl  eval_libero_best_of_N_n1_libero_90-living_room_scene1_20251228_220414.pkl  eval_libero_best_of_N_n1_libero_90-living_room_scene1_20251228_221004.pkl  eval_libero_best_of_N_n1_libero_90-living_room_scene1_20251228_223205.pkl  eval_libero_best_of_N_n1_libero_90-living_room_scene1_20251228_223716.pkl  eval_libero_best_of_N_n2_libero_90-living_room_scene1_20251228_220414.pkl  eval_libero_best_of_N_n2_libero_90-living_room_scene1_20251228_221009.pkl  eval_libero_best_of_N_n2_libero_90-living_room_scene1_20251228_223209.pkl  eval_libero_best_of_N_n2_libero_90-living_room_scene1_20251228_223717.pkl  eval_libero_best_of_N_n32_libero_90-living_room_scene1_20251228_220720.pkl  eval_libero_best_of_N_n32_libero_90-living_room_scene1_20251228_221251.pkl  eval_libero_best_of_N_n32_libero_90-living_room_scene1_20251228_223447.pkl  eval_libero_best_of_N_n32_libero_90-living_room_scene1_20251228_223952.pkl  eval_libero_best_of_N_n4_libero_90-living_room_scene1_20251228_220414.pkl  eval_libero_best_of_N_n4_libero_90-living_room_scene1_20251228_221014.pkl  eval_libero_best_of_N_n4_libero_90-living_room_scene1_20251228_223210.pkl  eval_libero_best_of_N_n4_libero_90-living_room_scene1_20251228_223752.pkl  eval_libero_best_of_N_n64_libero_90-living_room_scene1_20251228_220718.pkl  eval_libero_best_of_N_n64_libero_90-living_room_scene1_20251228_221251.pkl  eval_libero_best_of_N_n64_libero_90-living_room_scene1_20251228_223454.pkl  eval_libero_best_of_N_n8_libero_90-living_room_scene1_20251228_220414.pkl  eval_libero_best_of_N_n8_libero_90-living_room_scene1_20251228_221017.pkl  eval_libero_best_of_N_n8_libero_90-living_room_scene1_20251228_223208.pkl  eval_libero_best_of_N_n8_libero_90-living_room_scene1_20251228_223751.pkl
evaluation/: eval_classifier_best_of_N.py  eval_libero.py  eval_libero_best_of_N.py  eval_libero_vectorized.py  eval_train_classifier.py  q_visualization.ipynb  train_classifier.ipynb
evaluation/brc_eval_scripts/: eval_libero_best_of_N_single_n.py  generate_eval_sbatch.py  postprocess_best_of_n_eval.py  postprocess_helper.sh  top_level.sh
evaluation/brc_eval_scripts_OG/: eval_libero_best_of_N_single_n.py  generate_eval_sbatch.py  postprocess.py  top_level.sh
evaluation/test/: test_full.py  test_minimal.py
minimal_libero_dataloader/: dataloader.py
misc/: check_hdf5_data.ipynb
misc/alt_libero_dataset/: convert_libero_dataset.py
networks/: encoders.py  nets.py
plot_data/: README.md  ogbench-agg.pkl  ogbench-individual.pkl  robomimic-individual.pkl
plotting/: plot_Q_value_visuals.py
rlds_dataloader/: data_utils.py  dataloader.py  dataset.py  materialize.py  obs_transforms.py  rlds_dataset.py  traj_transforms.py
rlds_dataloader/tests/: test_dataloader.py  test_iterate_over_rlds_dataloader.ipynb  test_iterate_over_simplified_dataloader.py
rlpd_distributions/: __init__.py  tanh_deterministic.py  tanh_normal.py  tanh_transformed.py
rlpd_networks/: __init__.py  pixel_multiplexer.py  state_action_value.py
rlpd_networks/encoders/: __init__.py  d4pg_encoder.py
scripts/: train_offline.py
scripts/auto_shell_scripts/: D2_IQL_State_book_right_compartment_sbatch.sh  D2_IQL_book_right_compartment_sbatch.sh  run.sh
scripts/automatic/: D2_QCFQL_best_of_N.py  D3_QCFQL_distill_ddbpgbc.py  run.sh  run_supp.sh
scripts/automation/: B2_IQL_book_right_compartment.py  D2_IQL_State_book_right_compartment.py  run.sh
scripts/manual/: bcflowactor.sh  bcflowactor_augmented.sh  classifier_test.sh  debug_full_libero_Q_learning.sh  debug_libero_pipeline.sh  debug_libero_pixels_pipeline.sh  full_libero_Q.sh  full_libero_pixels_Q.sh  instruction_following_Q.sh  (+8 more)
tests/: test_Q_plotting.py  test_iterate_over_libero_dataset.py  test_subproc_libero_env.py
utils/: compute_norm_stats.py  data_utils.py  dataset_mixtures.py  datasets.py  datasets_ALT.py  encoders.py  flax_utils.py  log_utils.py  logger.py  logging.py  networks.py
wandb/: latest-run
(+75 files in other folders)
