[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "multitask_RL"
version = "0.1.0"
description = "Repository for multitask_RL implementations and experiments"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }

dependencies = [
    # LIBERO requirements (adjusted for Python 3.11 compatibility)
    "hydra-core>=1.2.0",
    "numpy>=1.26.4",
    "wandb",
    "easydict==1.9",
    "opencv-python>=4.6.0.66",
    "einops>=0.4.1",
    "thop>=0.1.1",
    "robosuite==1.4.0",  # Pin this - LIBERO is sensitive to robosuite version
    "bddl==1.0.1",  # Pin this - LIBERO-specific
    "future>=0.18.2",
    "matplotlib",
    "cloudpickle>=2.1.0",
    "gymnasium",
    
    # PyTorch - will be installed from CUDA wheel
    "torch>=2.5.1",
    "torchvision>=0.21.0",
    
    # TensorFlow ecosystem
    "tensorflow",
    "tensorflow-datasets",
    "tensorflow-probability",
    "tensorflow-hub",
    "tensorflow-text",
    
    # JAX ecosystem - use newer versions like the working project
    "jax[cuda12]==0.5.0",
    "flax==0.10.2",
    "optax>=0.2.0",
    "distrax>=0.1.5",
    "orbax-checkpoint>=0.11.1",
    
    # Your custom packages
    "dlimp",
    "libero",
    
    # Other dependencies
    "ml_collections",
    "moviepy",
    "jupyter",
    "ipykernel",
    "ipywidgets",
    "rich"
]

[project.urls]
Repository = "https://github.com/yajatyadav/multitask_RL"

[tool.uv.sources]
dlimp = { git = "https://github.com/yajatyadav/dlimp", branch = "main" }
libero = {path = "libero", editable = true}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["cache"]

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cu121"]